# pydra-mriqc

./: .gitignore  AUTHORS  NOTICE  README.md  README.rst  datalad_identity_interface.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
docs/: conf.py  index.rst
mock-tools/: afni  antsRegistration  mrconvert
nipype-auto-conv/: generate  requirements.txt
nipype-auto-conv/specs/: add_provenance.yaml  add_provenance_callables.py  artifact_mask.yaml  artifact_mask_callables.py  compute_qi2.yaml  compute_qi2_callables.py  conform_image.yaml  conform_image_callables.py  correct_signal_drift.yaml  correct_signal_drift_callables.py  dipy_dti.yaml  dipy_dti_callables.py  ensure_size.yaml  ensure_size_callables.py  extract_b0.yaml  extract_b0_callables.py  filter_shells.yaml  filter_shells_callables.py  functional_qc.yaml  functional_qc_callables.py  gather_timeseries.yaml  gather_timeseries_callables.py  gcor.yaml  harmonize.yaml  harmonize_callables.py  number_of_shells.yaml  number_of_shells_callables.py  package.yaml  read_dwi_metadata.yaml  read_dwi_metadata_callables.py  rotation_mask.yaml  rotation_mask_callables.py  select_echo.yaml  select_echo_callables.py  spikes.yaml  spikes_callables.py  split_shells.yaml  split_shells_callables.py  structural_qc.yaml  structural_qc_callables.py  (+4 more)
nipype-auto-conv/specs/interfaces/: derivatives_data_sink.yaml  ensure_size.yaml  iqm_file_sink.yaml  synth_strip.yaml  upload_iq_ms.yaml
nipype-auto-conv/specs/workflows/: mriqc.workflows.anatomical.base.airmsk_wf.yaml  mriqc.workflows.anatomical.base.anat_qc_workflow.yaml  mriqc.workflows.anatomical.base.compute_iqms.yaml  mriqc.workflows.anatomical.base.headmsk_wf.yaml  mriqc.workflows.anatomical.base.init_brain_tissue_segmentation.yaml  mriqc.workflows.anatomical.base.spatial_normalization.yaml  mriqc.workflows.anatomical.output.init_anat_report_wf.yaml  mriqc.workflows.diffusion.base.compute_iqms.yaml  mriqc.workflows.diffusion.base.dmri_qc_workflow.yaml  mriqc.workflows.diffusion.base.epi_mni_align.yaml  mriqc.workflows.diffusion.base.hmc_workflow.yaml  mriqc.workflows.diffusion.output.init_dwi_report_wf.yaml  mriqc.workflows.functional.base.compute_iqms.yaml  mriqc.workflows.functional.base.epi_mni_align.yaml  mriqc.workflows.functional.base.fmri_bmsk_workflow.yaml  mriqc.workflows.functional.base.fmri_qc_workflow.yaml  mriqc.workflows.functional.base.hmc.yaml  (+2 more)
related-packages/fileformats/: README.rst  pyproject.toml
related-packages/fileformats-extras/: README.rst  pyproject.toml
test_scripts/: run_anat_wf.py  run_anat_wf_orig.py
tools/: rename_template.py
(+130 files in other folders)
